--- a/web/public/styles/main.css
+++ b/web/public/styles/main.css
@@ -19,7 +19,7 @@ html, body {
 }
 a {
   text-decoration: underline;
-  color: #039BE5;
+  color: #E91E63;
 }
 .mdl-menu a {
   text-decoration: none;
@@ -62,16 +62,16 @@ a {
 /* Overrides MDL colors */
 .mdl-layout.is-upgraded .mdl-layout__tab.is-active::after,
 .fp-header .mdl-textfield__label:after {
-  background-color: #FFCA28;
+  background-color: #AF044F;
 }
 .mdl-snackbar__action {
-  color: #FFCA28;
+  color: #FCDA7E;
 }
 .mdl-textfield__label:after {
-  background-color: #0288D1;
+  background-color: #E91E63;
 }
 .mdl-textfield--floating-label.is-focused .mdl-textfield__label {
-  color: #0288D1;
+  color: #E91E63;
 }
 
 /* Header */
@@ -229,7 +229,7 @@ a {
 .mdl-layout__drawer .mdl-navigation .mdl-navigation__link.is-active,
 .is-active .mdl-menu__item {
   color: black;
-  background-color: #EBEBEB;
+  background-color: #F2F2F2;
 }
 .mdl-layout__drawer {
   border-right-width: 0;
@@ -362,7 +362,7 @@ a {
   font-weight: bold;
 }
 #page-user-info .fp-user-detail.is-active {
-  border-bottom: 2px #FFCA28 solid;
+  border-bottom: 2px #FCDA7E solid;
   padding: 5px 5px 3px 5px;
   margin: -5px 10px -5px -5px;
   opacity: 1;
@@ -377,7 +377,7 @@ a {
 }
 #page-user-info .fp-user-nbfollowing-container:HOVER {
   cursor: pointer;
-  background-color: #eaeaea;
+  background-color: #F2F2F2;
   border-radius: 5px;
   padding: 5px;
   margin: -5px 10px -5px -5px;
@@ -561,7 +561,7 @@ a {
   padding: 5px 0 6px 10px;
   cursor: pointer;
   font-size: 14px;
-  color: #0288D1;
+  color: #E91E63;
 }
 .fp-post .fp-morecomments:HOVER {
   text-decoration: underline;
@@ -575,7 +575,7 @@ a {
 .fp-post .fp-comments .fp-author,
 .fp-post .fp-first-comment .fp-author {
   text-decoration: none;
-  color: #0288D1;
+  color: #E91E63;
   font-weight: normal;
   padding: 3px 10px 3px 6px;
   margin: 0 -10px 0 -6px;
@@ -652,8 +652,8 @@ a {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #0288D1;
-  background: radial-gradient(circle, #039BE5, #01579b);
+  background-color: #AB124F;
+  background: radial-gradient(circle, #E91E63, #AF044F);
   z-index: 10000;
   display: flex;
   justify-content: center;
